# ele-qa-autopilot-pretest

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN-autotesting-metersphere.md  PLAN-vpc.md  README.md  deploy.md  setup.md  workflow.md
deploy/: .env.example  README.md  docker-compose.yml  nginx.conf
ele-autopilot/: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  deploy.md  eslint.config.mjs  package.json  react-router.config.ts  server.ts  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
ele-autopilot-local/: .env.template  .gitignore  AGENTS.md  CHANGELOG.md  README.md  deploy.md  install.sh  pyproject.toml
ele-autopilot-local/.github/workflows/: release.yml
ele-autopilot-local/autopilot/: __init__.py  app_meta.py  bundled_assets.py  callback.py  cli.py  config.py  job.py  job_service.py  task.py  task_action.py  task_action_out.template.json
ele-autopilot-local/langchain/: chat.py  example.py  serializer.py
ele-autopilot-local/middleware/: __init__.py  exception.py  response.py
ele-autopilot-local/patches/: __init__.py  browser_use_click.py
ele-autopilot-local/routers/: autopilot.py  system.py
ele-autopilot-local/schemas/: __init__.py  response.py
ele-autopilot-local/scripts/help/: run-cli.py  setup.sh
ele-autopilot-local/scripts/help/emails/: task2.txt
ele-autopilot-local/scripts/help/shops/: task1.txt  task2.txt
ele-autopilot-local/utils/: chrome_profile.py
ele-autotesting/: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  (+16 more)
(+193 files in other folders)
