[project]
name = "ele-autopilot-local"
version = "2.1.1"
description = "Local autopilot service for browser automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.13.4",
    "fastapi>=0.139.0",
    "langchain-openai>=1.1.9",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
ele-autopilot = "autopilot.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autopilot", "langchain", "middleware", "patches", "routers", "schemas", "utils"]
